[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/Desk.tscn" type="PackedScene" id=1]
[ext_resource path="res://gfx/theme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/MainScene.gd" type="Script" id=3]
[ext_resource path="res://scripts/Desk.gd" type="Script" id=4]
[ext_resource path="res://scripts/JobApplication.gd" type="Script" id=5]
[ext_resource path="res://gfx/header_buttons_theme.tres" type="Theme" id=6]
[ext_resource path="res://scripts/Inventory.gd" type="Script" id=7]
[ext_resource path="res://gfx/red_button_theme.tres" type="Theme" id=8]
[ext_resource path="res://scripts/MascotDetails.gd" type="Script" id=9]
[ext_resource path="res://gfx/progressbar_fg.png" type="Texture" id=10]
[ext_resource path="res://gfx/applicants_btn.png" type="Texture" id=11]
[ext_resource path="res://gfx/client-satisfaction.png" type="Texture" id=12]
[ext_resource path="res://gfx/employees_btn.png" type="Texture" id=13]
[ext_resource path="res://gfx/graphs_btn.png" type="Texture" id=14]
[ext_resource path="res://scripts/Stats.gd" type="Script" id=15]
[ext_resource path="res://gfx/Scroll_theme.tres" type="Theme" id=16]
[ext_resource path="res://sfx/click.wav" type="AudioStream" id=17]
[ext_resource path="res://sfx/hire.wav" type="AudioStream" id=18]

[node name="MainScene" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 20.0 ]
}

[node name="Bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
rect_min_size = Vector2( 240, 160 )
color = Color( 0.768627, 0.780392, 0.933333, 1 )

[node name="Areas" type="Node2D" parent="."]
position = Vector2( -240, 0 )

[node name="Stats" type="Control" parent="Areas"]
margin_left = -240.0
margin_top = 20.0
margin_bottom = 160.0
script = ExtResource( 15 )

[node name="Header" type="ColorRect" parent="Areas/Stats"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -49.0
margin_right = 49.0
margin_bottom = 16.0
color = Color( 0.388235, 0.364706, 0.588235, 1 )

[node name="Label" type="Label" parent="Areas/Stats/Header"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.5
margin_top = -5.5
margin_right = 53.5
margin_bottom = 5.5
theme = ExtResource( 2 )
text = "Statistics"
align = 1

[node name="noStats" type="Label" parent="Areas/Stats"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.5
margin_top = -25.5
margin_right = 87.5
margin_bottom = -14.5
theme = ExtResource( 2 )
text = "Stats not implemented yet"
align = 1

[node name="JobApplication" type="Control" parent="Areas"]
margin_top = 20.0
margin_right = 240.0
margin_bottom = 160.0
script = ExtResource( 5 )

[node name="Header" type="ColorRect" parent="Areas/JobApplication"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -49.0
margin_right = 49.0
margin_bottom = 16.0
color = Color( 0.388235, 0.364706, 0.588235, 1 )

[node name="Label" type="Label" parent="Areas/JobApplication/Header"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.5
margin_top = -5.5
margin_right = 53.5
margin_bottom = 5.5
theme = ExtResource( 2 )
text = "Applicants"
align = 1

[node name="HirePlayer" type="AudioStreamPlayer" parent="Areas/JobApplication"]
stream = ExtResource( 18 )
volume_db = -7.828

[node name="PolaroidSelector" type="ScrollContainer" parent="Areas/JobApplication"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -104.0
margin_top = 24.0
margin_right = 116.0
margin_bottom = 144.0
rect_min_size = Vector2( 220, 120 )
theme = ExtResource( 16 )

[node name="GridContainer" type="GridContainer" parent="Areas/JobApplication/PolaroidSelector"]
margin_right = 220.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="Inventory" type="Control" parent="Areas"]
margin_left = 240.0
margin_top = 20.0
margin_right = 480.0
margin_bottom = 160.0
script = ExtResource( 7 )

[node name="Header" type="ColorRect" parent="Areas/Inventory"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -51.0
margin_right = 51.0
margin_bottom = 16.0
size_flags_horizontal = 3
color = Color( 0.388235, 0.364706, 0.588235, 1 )

[node name="Label" type="Label" parent="Areas/Inventory/Header"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.5
margin_top = -5.5
margin_right = 45.5
margin_bottom = 5.5
theme = ExtResource( 2 )
text = "Your Mascots"
align = 1

[node name="noEmployees" type="Label" parent="Areas/Inventory"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.5
margin_top = -25.5
margin_right = 77.5
margin_bottom = -14.5
theme = ExtResource( 2 )
text = "You have no employees"
align = 1

[node name="PolaroidList" type="ScrollContainer" parent="Areas/Inventory"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -110.0
margin_top = 21.0
margin_right = 110.0
margin_bottom = 141.0
rect_min_size = Vector2( 220, 120 )
theme = ExtResource( 16 )

[node name="GridContainer" type="GridContainer" parent="Areas/Inventory/PolaroidList"]
margin_right = 220.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="MascotDetails" type="Control" parent="Areas"]
margin_left = 480.0
margin_top = 20.0
margin_right = 720.0
margin_bottom = 160.0
script = ExtResource( 9 )

[node name="LeftSideBackground" type="ColorRect" parent="Areas/MascotDetails"]
margin_right = 78.0
margin_bottom = 140.0
color = Color( 0.603922, 0.560784, 0.878431, 1 )

[node name="Header" type="ColorRect" parent="Areas/MascotDetails"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -38.0
margin_right = 38.0
margin_bottom = 16.0
color = Color( 1, 1, 1, 0 )

[node name="AtWorkLabel" type="Label" parent="Areas/MascotDetails"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -37.5
margin_top = -63.5
margin_right = 53.5
margin_bottom = -52.5
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.388235, 0.364706, 0.588235, 1 )
text = "Is at work..."

[node name="AtTrainingLabel" type="Label" parent="Areas/MascotDetails"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -37.5
margin_top = -63.5
margin_right = 53.5
margin_bottom = -52.5
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.388235, 0.364706, 0.588235, 1 )
text = "in a further training"

[node name="Train" type="Button" parent="Areas/MascotDetails"]
margin_left = 82.0
margin_top = 3.0
margin_right = 141.0
margin_bottom = 17.0
theme = ExtResource( 6 )
text = "Training"

[node name="Fire" type="Button" parent="Areas/MascotDetails"]
margin_left = 146.0
margin_top = 3.0
margin_right = 205.0
margin_bottom = 17.0
theme = ExtResource( 8 )
text = "Fire!"
align = 0

[node name="ClientSatisfaction" type="Control" parent="Areas/MascotDetails"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -110.0
margin_top = 103.0
margin_right = -40.0
margin_bottom = 125.0

[node name="Background" type="ColorRect" parent="Areas/MascotDetails/ClientSatisfaction"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -22.0
margin_top = 6.0
margin_right = 24.0
margin_bottom = 16.0
color = Color( 0.388235, 0.364706, 0.588235, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Areas/MascotDetails/ClientSatisfaction/Background"]
modulate = Color( 0.388235, 0.364706, 0.588235, 1 )
position = Vector2( -8, 4 )
texture = ExtResource( 12 )

[node name="Progess" type="TextureProgress" parent="Areas/MascotDetails/ClientSatisfaction/Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -22.0
margin_top = 1.0
margin_right = 22.0
margin_bottom = 9.0
max_value = 1.0
step = 0.1
texture_progress = ExtResource( 10 )
nine_patch_stretch = true

[node name="Events" type="ScrollContainer" parent="Areas/MascotDetails"]
margin_left = 82.0
margin_top = 21.0
margin_right = 239.0
margin_bottom = 141.0
rect_min_size = Vector2( 130, 113 )
theme = ExtResource( 16 )
scroll_horizontal_enabled = false

[node name="Wrapper" type="VBoxContainer" parent="Areas/MascotDetails/Events"]
margin_right = 157.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Desk" parent="." instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="ClickPlayer" type="AudioStreamPlayer" parent="Desk"]
stream = ExtResource( 17 )
volume_db = -15.0
pitch_scale = 0.5

[node name="StatisticsBtn" type="Button" parent="Desk"]
margin_left = 173.0
margin_top = 5.0
margin_right = 193.0
margin_bottom = 20.0
theme = ExtResource( 6 )
icon = ExtResource( 14 )
icon_align = 1

[node name="ApplicantsBtn" type="Button" parent="Desk"]
margin_left = 195.0
margin_top = 5.0
margin_right = 215.0
margin_bottom = 20.0
theme = ExtResource( 6 )
icon = ExtResource( 11 )
icon_align = 1

[node name="EmployeesBtn" type="Button" parent="Desk"]
margin_left = 217.0
margin_top = 5.0
margin_right = 237.0
margin_bottom = 20.0
theme = ExtResource( 6 )
icon = ExtResource( 13 )
icon_align = 1

[connection signal="select" from="Areas/Inventory" to="." method="onOpenMascotDetails"]
[connection signal="close" from="Areas/MascotDetails" to="." method="onMascotFire"]
[connection signal="pressed" from="Areas/MascotDetails/Train" to="Areas/MascotDetails" method="onTraining"]
[connection signal="pressed" from="Areas/MascotDetails/Fire" to="Areas/MascotDetails" method="onFire"]
[connection signal="pressed" from="Desk/StatisticsBtn" to="." method="onOpenStatistics"]
[connection signal="pressed" from="Desk/ApplicantsBtn" to="." method="onOpenJobApplication"]
[connection signal="pressed" from="Desk/EmployeesBtn" to="." method="onOpenInventory"]
